--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,11 @@
             >
         </activity>
 
+        <activity android:name="activity.UserCollectionActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
+        </activity>
+
         <service android:name="service.AudioService"></service>
     </application>
 </manifest>
