--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,13 @@
             >
         </activity>
 
+
+        <activity android:name="activity.UserCommentBottomWindow"
+            android:screenOrientation="portrait"
+            android:theme="@style/Window"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
+
         <service android:name="service.AudioService"></service>
     </application>
 </manifest>
