--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.6'
     compile 'commons-collections:commons-collections:3.2.2'
 
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+
     compileOnly 'org.projectlombok:lombok:1.18.4'
     testCompile 'junit:junit:4.12'
 
