--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,11 @@
             >
         </activity>
 
+        <activity android:name="activity.UserUploadActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
+        </activity>
+
 
         <activity android:name="activity.UserCommentBottomWindow"
             android:screenOrientation="portrait"
