--- a/ZBLibrary/build.gradle
+++ b/ZBLibrary/build.gradle
@@ -25,7 +25,7 @@ android {
 }
 
 dependencies {
-    //TODO 如果这些依赖和你项目中的依赖有冲突，则需要统一版本号，或者删除重复的依赖
+    //TODO 如果这些依赖和项目中的依赖有冲突，则需要统一版本号，或者删除重复的依赖
     api fileTree(include: ['*.jar'], dir: 'libs')
     api 'com.squareup.okhttp3:okhttp:3.11.0'
     api 'com.alibaba:fastjson:1.2.54'
